sbmvp-548 Show expand/collapse at correct times (#70)

--- a/src/app/shared/company-navbar/company-navbar.container.scss
+++ b/src/app/shared/company-navbar/company-navbar.container.scss
@@ -7,6 +7,10 @@
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.25);
     background-color: rgba(255, 255, 255, 0.6);
 
+    .btn-hidden {
+        visibility: hidden;
+    }
+
     .btn-expanded,
     .btn-collapsed {
         @extend .hand-cursor;
